--- a/blue-penguin/templates/base.html
+++ b/blue-penguin/templates/base.html
@@ -85,6 +85,8 @@
                 <p>
                 <a href="https://github.com/jody-frankowski/blue-penguin">Blue Penguin</a> Theme
                 &middot;
+                This site <a href="KomeilParseh.github.io/2021/3/31/LICENSE/"> License </a>
+                &middot;
                 Powered by <a href="http://getpelican.com">Pelican</a>
                  {% if FEED_ALL_ATOM %}
                 &middot;
