--- a/blue-penguin/templates/base.html
+++ b/blue-penguin/templates/base.html
@@ -1,7 +1,7 @@
 {% macro ephemeral_nav_link(what, where, selected=False) -%}
 <li class="ephemeral{% if selected %} selected{% endif %}"><a href="{{ SITEURL }}/{{ where }}">{{what}}</a></li>
 {%- endmacro -%}
-
+<meta name="google-site-verification" content="o8Ms0tLHYqz-bMsf7xXjCXOwSxqks0mlGBDfRR3Cts0" />
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
